--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,16 @@ div{
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid;
-    border-left: 5px solid;
+    border-bottom: 2px solid white;
+    border-left: 5px solid white;
 }
 
 .blue{
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px solid;
-    border-top: 2px solid;
+    border-right: 5px solid white;
+    border-top: 2px solid white;
 }
 .blue h2, .blue p{
     color: #C4C4C4;
@@ -67,8 +67,8 @@ div{
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid;
-    border-left: 5px solid;
+    border-bottom: 2px solid white;
+    border-left: 5px solid white;
 }
 
 .yellow p {
@@ -79,8 +79,8 @@ div{
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px solid;
-    border-top: 2px solid;
+    border-right: 5px solid white;
+    border-top: 2px solid white;
 }
 
 footer {
