--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ div{
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
+    border: none;
     border-bottom: 2px solid white;
     border-left: 5px solid white;
 }
@@ -56,6 +57,7 @@ div{
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
+    border: none;
     border-right: 5px solid white;
     border-top: 2px solid white;
 }
@@ -67,6 +69,7 @@ div{
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
+    border: none;
     border-bottom: 2px solid white;
     border-left: 5px solid white;
 }
@@ -79,6 +82,7 @@ div{
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
+    border: none;
     border-right: 5px solid white;
     border-top: 2px solid white;
 }
